--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ stages:
     jobs:
       - job: Check
         displayName: Sonar Check
+        container: mcr.microsoft.com/windows/servercore:ltsc2019
         steps:
           - task: SonarCloudPrepare@1
             inputs:
